--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "livewire/volt": "^1.6",
         "mhmiton/laravel-modules-livewire": "^3.0",
         "nwidart/laravel-modules": "^11.1",
-        "robsontenorio/mary": "^1.41"
+        "robsontenorio/mary": "^1.41",
+        "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
